# nexus-serde

./: ARCHITECTURE.md  Cargo.toml  README.md  flake.nix  manifest
.beads/: config.yaml  metadata.json
src/: de.rs  error.rs  lexer.rs  lib.rs  ser.rs
tests/: nexus_wrappers.rs
