[package]
name         = "nexus-serde"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/nexus-serde"
description  = "serde Serializer + Deserializer for the nexus data format syntax"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
